--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -7,6 +7,9 @@ COPY *.csproj ./
 RUN dotnet restore
 # Copy the rest of the source code and build the project
 COPY . ./
+
+RUN dotnet ef database update
+
 RUN dotnet publish -c Release -o build
 
 
@@ -23,6 +26,7 @@ WORKDIR /app
 # Use the base image as the final image
 FROM base AS final
 # Copy the build output from the build image
+COPY --from=build-env /app/store.db .
 COPY --from=build-env /app/build .
 # Set the entrypoint command to run the application
 ENTRYPOINT ["dotnet", "API.dll"]
