--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -8,6 +8,8 @@ RUN dotnet restore
 # Copy the rest of the source code and build the project
 COPY . ./
 
+RUN dotnet tool install --global dotnet-ef
+ENV PATH="$PATH:/root/.dotnet/tools"
 RUN dotnet ef database update
 
 RUN dotnet publish -c Release -o build
