--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=store.db"
   },
-  "AllowedHosts": "*"
+  "JWTSettings": {
+    "TokenKey": "ths is a secret key and needs to be at least 12 characters"
+  }
 }
